Fixed compact mode not hiding sometimes and having too much trigger area

--- a/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
+++ b/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
@@ -234,11 +234,11 @@
     transition: scale 0.07s ease;
     &[fadein='true']:not([zen-essential='true']) {
       #tabbrowser-tabs[zen-workspace-animation='previous'] & {
-        animation: zen-slide-in 0.2s ease;
+        animation: zen-slide-in 0.3s ease;
       }
 
       #tabbrowser-tabs[zen-workspace-animation='next'] & {
-        animation: zen-slide-in-reverse 0.2s ease;
+        animation: zen-slide-in-reverse 0.3s ease;
       }
     }
 
